--- a/project.html
+++ b/project.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My First Webpage</title>
+    <title>Styled Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f2f2f2;
+            margin: 0;
+            padding: 20px;
+        }
+        .box {
+            background: white;
+            padding: 20px;
+            max-width: 600px;
+            margin: auto;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
 
-    <h1>Welcome to My Website</h1>
-    <p>This is a basic HTML page.</p>
+<div class="box">
+    <h1>My Styled Page</h1>
+    <p>This is a simple and clean styled page.</p>
+</div>
 
 </body>
 </html>
